--- a/AsagiHandyScriptsForUnity/batches/config
+++ b/AsagiHandyScriptsForUnity/batches/config
@@ -1,5 +1,5 @@
 # ValiableName,Valiable
 # don't use space both in comma before and after.
 
-UNITY_PATH,C:\Program Files\Unity2017-2-1p1
+UNITY_PATH,C:\Program Files\Unity2018-1-0f2
 OUTPUT,AsagiHandyScripts
