--- a/AsagiHandyScriptsForUnity/AsagiHandyScriptsForUnity.csproj
+++ b/AsagiHandyScriptsForUnity/AsagiHandyScriptsForUnity.csproj
@@ -20,10 +20,10 @@
 
   <ItemGroup>
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files\Unity2017-3-1f1\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files\Unity2018-2-0f2\Editor\Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="Vuforia.UnityExtensions">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files\Unity2017-2-1p1\Editor\Data\PlaybackEngines\VuforiaSupport\Managed\Runtime\Vuforia.UnityExtensions.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files\Unity2018-2-0f2\Editor\Data\PlaybackEngines\VuforiaSupport\Managed\Runtime\Vuforia.UnityExtensions.dll</HintPath>
     </Reference>
   </ItemGroup>
 
